# pylon

./: .gitignore  BLUEPRINT.md  BRAND.md  CLAUDE.md  IDENTITY.md  README.md
.github/workflows/: site-deploy.yml
codebases/api/: CHANGELOG.md  HISTORY.md  README.md  issues.json  pull_requests.json  pyproject.toml
codebases/api/.github/: PULL_REQUEST_TEMPLATE.md
codebases/api/.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
codebases/api/.github/workflows/: ci.yml  lint.yml
codebases/api/docs/: architecture.md
codebases/api/src/pylon/: __init__.py  analyzer.py  github_client.py  main.py  models.py  webhook.py
codebases/api/src/pylon/rules/: __init__.py  async_without_await.py  bare_except.py  bare_mutex.py  print_in_prod.py  todo_without_author.py
codebases/api/tests/: conftest.py  test_analyzer.py  test_main.py  test_rules.py  test_webhook.py
customers/: README.md  accounts.json  users.json
kb/: README.md
kb/articles/: 01-getting-started.md  02-installing-pylon.md  03-pylon-yaml-reference.md  04-authoring-custom-rules.md  05-suppressing-false-positives.md  06-tower-dashboard-reference.md  07-marketplace-guide.md  08-audit-log-export.md  09-billing-pricing-faq.md  10-troubleshooting-pylon-not-commenting.md
marketing/launch-tier-2-tangible/: domain-options.md
marketing/launch-v0.1.0/: linkedin-post.md  medium-post.md  (+1 more)
org/: chart.md  employees.json
product/: PRD.md  ROADMAP.md  competitive-analysis.md  pricing.md
site/: .gitignore  README.md  astro.config.mjs  package.json  tailwind.config.mjs
support/: README.md
tickets/: README.md  all.json  sprints.json
(+45 files in other folders)
