[project]
name = "pylon-api"
version = "2.4.2"
description = "Pylon's PR review automation API. Webhook ingest, analyzer, findings store."
authors = [
  { name = "Priya Subramanian", email = "priya@pylon.dev" },
  { name = "Wei Chen", email = "wei@pylon.dev" },
  { name = "Hugo Lefèvre", email = "hugo@pylon.dev" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "pydantic==2.9.2",
  "uvicorn[standard]==0.32.0",
  "httpx==0.27.2",
  "tree-sitter==0.23.0",
  "tree-sitter-python==0.23.4",
  "sqlalchemy==2.0.34",
  "asyncpg==0.29.0",
  "redis==5.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.6.9",
  "mypy==1.11.2",
  "hypothesis==6.112.1",
]

[project.urls]
Homepage = "https://pylon.dev"
Documentation = "https://pylon.dev/docs"
Repository = "https://github.com/pylon-dev/pylon-api"
Issues = "https://github.com/pylon-dev/pylon-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pylon"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
